--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,59 @@
+absl-py==2.1.0
+astunparse==1.6.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+colorama==0.4.6
 feedparser==6.0.11
+filelock==3.16.1
+flatbuffers==24.3.25
+fsspec==2024.10.0
+gast==0.6.0
+google-pasta==0.2.0
 h11==0.14.0
+huggingface-hub==0.27.0
 idna==3.10
+Jinja2==3.1.4
+joblib==1.4.2
 lxml==5.3.0
+markdown==3.7
+markupsafe==3.0.2
+mpmath==1.3.0
 mysql-connector-python==9.1.0
+networkx==3.4.2
 numpy==2.1.3
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
+pillow==11.0.0
 pycparser==2.22
-PySocks==1.7.1
+pysocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+pyyaml==6.0.2
+regex==2024.11.6
 requests==2.32.3
+safetensors==0.4.5
 schedule==1.2.2
+scikit-learn==1.6.0
+scipy==1.14.1
 selenium==4.26.1
+sentence-transformers==3.3.1
+setuptools==75.6.0
 sgmllib3k==1.0.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
+sympy==1.13.1
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+torch==2.5.1
+tqdm==4.67.1
+transformers==4.47.0
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
