--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 absl-py==2.1.0
+annotated-types==0.7.0
 astunparse==1.6.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
+blis==1.1.0
+catalogue==2.0.10
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
 colorama==0.4.6
+confection==0.1.5
+cymem==2.0.10
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 feedparser==6.0.11
 filelock==3.16.1
 flatbuffers==24.3.25
@@ -17,10 +25,16 @@ huggingface-hub==0.27.0
 idna==3.10
 Jinja2==3.1.4
 joblib==1.4.2
+langcodes==3.5.0
+language_data==1.3.0
 lxml==5.3.0
+marisa-trie==1.2.1
 markdown==3.7
+markdown-it-py==3.0.0
 markupsafe==3.0.2
+mdurl==0.1.2
 mpmath==1.3.0
+murmurhash==1.0.11
 mysql-connector-python==9.1.0
 networkx==3.4.2
 numpy==2.1.3
@@ -28,7 +42,11 @@ outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+preshed==3.0.9
 pycparser==2.22
+pydantic==2.10.3
+pydantic_core==2.27.1
+Pygments==2.18.0
 pysocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -36,6 +54,7 @@ pytz==2024.2
 pyyaml==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rich==13.9.4
 safetensors==0.4.5
 schedule==1.2.2
 scikit-learn==1.6.0
@@ -44,11 +63,18 @@ selenium==4.26.1
 sentence-transformers==3.3.1
 setuptools==75.6.0
 sgmllib3k==1.0.0
+shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.5
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
+spacy==3.8.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.0
 sympy==1.13.1
+thinc==8.3.3
 threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.5.1
@@ -56,9 +82,13 @@ tqdm==4.67.1
 transformers==4.47.0
 trio==0.27.0
 trio-websocket==0.11.1
+typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+wasabi==1.1.3
+weasel==0.4.1
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+wrapt==1.17.0
 wsproto==1.2.0
