--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ pysocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-pyyaml==6.0.2
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
