--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==2.1.0
 annotated-types==0.7.0
+asttokens==3.0.0
 astunparse==1.6.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
@@ -11,20 +12,34 @@ charset-normalizer==3.4.0
 click==8.1.7
 cloudpathlib==0.20.0
 colorama==0.4.6
+comm==0.2.2
 confection==0.1.5
+contourpy==1.3.1
+cycler==0.12.1
 cymem==2.0.10
+debugpy==1.8.11
+decorator==5.1.1
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+executing==2.1.0
 feedparser==6.0.11
 filelock==3.16.1
 flatbuffers==24.3.25
+fonttools==4.55.3
 fsspec==2024.10.0
 gast==0.6.0
 google-pasta==0.2.0
+greenlet==3.1.1
 h11==0.14.0
 huggingface-hub==0.27.0
 idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
 langcodes==3.5.0
 language_data==1.3.0
 lxml==5.3.0
@@ -32,26 +47,39 @@ marisa-trie==1.2.1
 markdown==3.7
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.11
 mysql-connector-python==9.1.0
+nest-asyncio==1.6.0
 networkx==3.4.2
+nltk==3.9.1
 numpy==2.1.3
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 pillow==11.0.0
+platformdirs==4.3.6
 preshed==3.0.9
+prompt_toolkit==3.0.48
+psutil==6.1.1
+pure_eval==0.2.3
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyMySQL==1.1.1
+pyparsing==3.2.1
 pysocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+pywin32==308
 PyYAML==6.0.2
+pyzmq==26.2.0
 regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
@@ -72,13 +100,17 @@ soupsieve==2.6
 spacy==3.8.3
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
+SQLAlchemy==2.0.36
 srsly==2.5.0
+stack-data==0.6.3
 sympy==1.13.1
 thinc==8.3.3
 threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.5.1
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.47.0
 trio==0.27.0
 trio-websocket==0.11.1
@@ -87,8 +119,10 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 wasabi==1.1.3
+wcwidth==0.2.13
 weasel==0.4.1
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+wordcloud==1.9.4
 wrapt==1.17.0
 wsproto==1.2.0
