--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.11
-mysql-connector-python==9.1.0
+mysql-connector-python==9.2.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
@@ -71,13 +71,12 @@ pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
 Pygments==2.18.0
-PyMySQL==1.1.1
 pyparsing==3.2.1
 pysocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-pywin32==308 ; sys_platform == 'win32'
+pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.0
 regex==2024.11.6
@@ -100,7 +99,6 @@ soupsieve==2.6
 spacy==3.8.3
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-SQLAlchemy==2.0.36
 srsly==2.5.0
 stack-data==0.6.3
 sympy==1.13.1
