--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_
 executing==2.1.0
 feedparser==6.0.11
 filelock==3.16.1
+flask
 flatbuffers==24.3.25
 fonttools==4.55.3
 fsspec==2024.10.0
@@ -124,3 +125,4 @@ websocket-client==1.8.0
 wordcloud==1.9.4
 wrapt==1.17.0
 wsproto==1.2.0
+
