--- a/.github/workflows/run_scripts.yml
+++ b/.github/workflows/run_scripts.yml
@@ -3,7 +3,7 @@ name: Daily Data Pipeline
 # Planification : exécution tous les jours à 20h
 on:
   schedule:
-    - cron: '0 20 * * *' # À 20h (heure UTC, ajuste si nécessaire)
+    - cron: '0 20 * * *' # À 20h (heure UTC)
   workflow_dispatch: # Permet aussi de lancer manuellement le workflow si besoin
 
 jobs:
@@ -22,12 +22,21 @@ jobs:
         python-version: '3.10'
 
     # 3. Installation des dépendances
-    - name: Install dependencies
+    - name: Run pytest tests
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # 4. Lancer le scraping
+    # 4. Lancer les tests pytest
+    - name: Install dependencies
+      run: |
+        pytest tests\test_generate_summaries.py
+        pytest tests\test_generate_keywords.py
+        pytest tests\test_generate_keywords_scientific_articles.py
+      continue-on-error: true # Continue même si l'un des scripts échoue
+        
+
+    # 5. Lancer le scraping
     - name: Run scraping scripts
       run: |
         python scripts/scrape_aiwatch_eu.py
@@ -44,30 +53,30 @@ jobs:
         python scripts/scrape_microsoft_azure_videos.py
         python scripts/scrape_mistral_videos.py
         python scripts/scrape_openai_videos.py
-      continue-on-error: true  # Continue même si l'un des scripts échoue
+      continue-on-error: true  
 
-    # 5. Réunir les JSON dans deux fichiers
+    # 6. Réunir les JSON dans deux fichiers
     - name: Combine JSON files
       run: python scripts/generate_json.py
 
-    # 6. Nettoyer les fichiers JSON
+    # 7. Nettoyer les fichiers JSON
     - name: Clean JSON files
       run: python scripts/clean_json.py
 
-    # 7. Générer les résumés
+    # 8. Générer les résumés
     - name: Generate summaries
       run: python scripts/generate_summaries.py
 
-    # 8. Générer les mots-clés pour les articles
+    # 9. Générer les mots-clés pour les articles
     - name: Generate keywords for articles
       run: python scripts/generate_keywords.py
 
-    # 9. Générer les mots-clés pour les articles scientifiques
+    # 10. Générer les mots-clés pour les articles scientifiques
     - name: Generate keywords for scientific articles
       run: python scripts/generate_keywords_scientific_articles.py
       if: ${{ steps.scrape_arxiv_ai.outcome != 'failure' }}  # Si le script arxiv n'a pas échoué, continuer l'étape 9
 
-    # 10. Enregistrer les fichiers générés en tant qu'artefacts
+    # 11. Enregistrer les fichiers générés en tant qu'artefacts
     - name: Upload generated JSON files
       uses: actions/upload-artifact@v4
       with:
