--- a/.github/workflows/run_scripts.yml
+++ b/.github/workflows/run_scripts.yml
@@ -1,43 +1,46 @@
 name: Daily Data Pipeline
 
-# Planification : exécution tous les jours à 20h
 on:
   schedule:
-    - cron: '0 20 * * *' # À 20h (heure UTC)
-  workflow_dispatch: # Permet aussi de lancer manuellement le workflow si besoin
+    - cron: '0 20 * * *'
+  workflow_dispatch:
 
 jobs:
   pipeline:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Vérification du code source
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # 2. Installation de Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    # 3. Installation des dépendances
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # 4. Lancer les tests pytest
+    - name: Set HuggingFace environment variables
+      run: |
+        echo "HF_HUB_DOWNLOAD_TIMEOUT=60" >> $GITHUB_ENV
+        echo "TRANSFORMERS_CACHE=$HOME/.cache/huggingface" >> $GITHUB_ENV
+        echo "SENTENCE_TRANSFORMERS_HOME=$HOME/.cache/sentence-transformers" >> $GITHUB_ENV
+
+    - name: Pre-download SentenceTransformer model
+      run: |
+        python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('all-MiniLM-L6-v2')"
+
     - name: Run pytest tests
       run: |
         pytest tests/test_generate_summaries.py
         pytest tests/test_generate_keywords.py
         pytest tests/test_generate_keywords_scientific_articles.py
-      continue-on-error: true # Continue même si l'un des scripts échoue
-        
 
-    # 5. Lancer le scraping
-    - name: Run scraping scripts
+    # --- SCRAPING ---
+    - name: Scrape other sources
       run: |
         python scripts/scrape_aiwatch_eu.py
         python scripts/scrape_azure_ai.py
@@ -47,36 +50,33 @@ jobs:
         python scripts/scrape_techcrunch_ai.py
         python scripts/scrape_theverge_ai.py
         python scripts/scrape_venturebeat_ai.py
-        python scripts/scrape_arxiv_ai.py
         python scripts/scrape_anthropic_videos.py
         python scripts/scrape_google_deepmind_videos.py
         python scripts/scrape_microsoft_azure_videos.py
         python scripts/scrape_mistral_videos.py
         python scripts/scrape_openai_videos.py
-      continue-on-error: true  
 
-    # 6. Réunir les JSON dans deux fichiers
+    - name: Scrape arXiv
+      id: scrape_arxiv
+      run: python scripts/scrape_arxiv_ai.py
+
+    # --- POST-SCRAPING ---
     - name: Combine JSON files
       run: python scripts/generate_json.py
 
-    # 7. Nettoyer les fichiers JSON
     - name: Clean JSON files
       run: python scripts/clean_json.py
 
-    # 8. Générer les résumés
     - name: Generate summaries
       run: python scripts/generate_summaries.py
 
-    # 9. Générer les mots-clés pour les articles
     - name: Generate keywords for articles
       run: python scripts/generate_keywords.py
 
-    # 10. Générer les mots-clés pour les articles scientifiques
     - name: Generate keywords for scientific articles
+      if: steps.scrape_arxiv.outcome == 'success'
       run: python scripts/generate_keywords_scientific_articles.py
-      if: ${{ steps.scrape_arxiv_ai.outcome != 'failure' }}  # Si le script arxiv n'a pas échoué, continuer l'étape 9
 
-    # 11. Enregistrer les fichiers générés en tant qu'artefacts
     - name: Upload generated JSON files
       uses: actions/upload-artifact@v4
       with:
