--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,7 @@ Pygments==2.18.0
 pyparsing==3.2.1
 pysocks==1.7.1
 pytest
+pytest-asyncio
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
