--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==2.1.0
 annotated-types==0.7.0
-apscheduler
+APScheduler==3.11.0
 asttokens==3.0.0
 astunparse==1.6.3
 attrs==24.2.0
@@ -22,10 +22,10 @@ debugpy==1.8.11
 decorator==5.1.1
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 executing==2.1.0
-fastapi
+fastapi==0.115.7
 feedparser==6.0.11
 filelock==3.16.1
-flask
+Flask==3.1.0
 flatbuffers==24.3.25
 fonttools==4.55.3
 fsspec==2024.10.0
@@ -33,7 +33,8 @@ gast==0.6.0
 google-pasta==0.2.0
 greenlet==3.1.1
 h11==0.14.0
-httpx
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.27.0
 idna==3.10
 ipykernel==6.29.5
@@ -77,8 +78,9 @@ pydantic_core==2.27.1
 Pygments==2.18.0
 pyparsing==3.2.1
 pysocks==1.7.1
-pytest
-pytest-asyncio
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -122,6 +124,7 @@ typer==0.15.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.34.0
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
