--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,6 @@ ipython==8.31.0
 jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.4.2
-jose==1.0.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
@@ -84,6 +83,7 @@ pytest-asyncio==0.26.0
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
 pytz==2024.2
 pywin32==308; sys_platform == "win32"
 PyYAML==6.0.2
