--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+passlib==1.7.4
 pillow==11.0.0
 platformdirs==4.3.6
 preshed==3.0.9
