--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,14 +20,16 @@ jobs:
           MYSQL_DATABASE: api_test_db
           MYSQL_USER: test_user
           MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST_USER }}
-        options: >-
-          --health-cmd="mysqladmin ping"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-        wait-for:
-          mysql:
-            condition: service_healthy
+        healthcheck: # Bloc healthcheck standard pour Docker/services GitHub Actions
+          test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "${{ env.MYSQL_USER }}", "-p${{ env.PASSWORD }}"]
+          interval: 10s
+          timeout: 5s
+          retries: 5
+          start_period: 10s
+
+    wait-for:
+      mysql:
+        condition: service_healthy
 
     steps:
       - name: Checkout code
