--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,16 +20,6 @@ jobs:
           MYSQL_DATABASE: api_test_db
           MYSQL_USER: test_user
           MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST_USER }}
-        healthcheck:
-          test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1"]
-          interval: 10s
-          timeout: 5s
-          retries: 5
-          start_period: 10s
-
-    wait-for:
-      mysql:
-        condition: service_healthy
 
     steps:
       - name: Checkout code
@@ -40,6 +30,18 @@ jobs:
         with:
           python-version: 3.11
 
+      - name: Wait for MySQL to be ready
+        run: |
+          echo "Attente que MySQL soit prêt..."
+          for i in {1..30}; do
+            if mysqladmin ping -h 127.0.0.1 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" --silent; then
+              echo "MySQL est prêt !"
+              break
+            fi
+            echo "En attente de MySQL ($i)..."
+            sleep 2
+          done
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -48,7 +50,7 @@ jobs:
 
       - name: Run unit and integration tests (excluding generation tests)
         env:
-          DB_HOST: mysql
+          DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_USER: test_user
           DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST_USER }}
