--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,12 @@ jobs:
         with:
           python-version: 3.11
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest requests
+
       - name: Wait for MySQL to be ready
         run: |
           echo "Attente que MySQL soit prêt..."
@@ -42,15 +48,18 @@ jobs:
             sleep 2
           done
 
-      - name: Install dependencies
+      - name: Set up Database Schema
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest requests
+          echo "Configuration du schéma de base de données..."
+          mysql -h mysql -P 3306 -u ${{ env.DB_USER }} -p"${{ env.DB_PASSWORD }}" ${{ env.DB_NAME }} < schema.sql
+        env:
+          DB_USER: test_user
+          DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST_USER }}
+          DB_NAME: api_test_db
 
       - name: Run unit and integration tests (excluding generation tests)
         env:
-          DB_HOST: 127.0.0.1
+          DB_HOST: mysql
           DB_PORT: 3306
           DB_USER: test_user
           DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST_USER }}
