--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,4 +68,4 @@ jobs:
           DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD_TEST_USER }}
           DB_NAME: api_test_db
         run: |
-          pytest tests/ -k "not test_generate_summaries and not test_generate_keywords and not test_generate_keywords_scientific_articles"
+          pytest tests/ -k "not test_generate_summaries and not test_generate_keywords and not test_generate_keywords_scientific_articles" and not test_alerts
