--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ app/security/__pycache__
 dashboard/__pycache__
 tests/__pycache__
 scripts/__pycache__
+tests/unit/__pycache__
+tests/integration/__pycache__
