--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,10 +6,18 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  DB_HOST: 127.0.0.1
+  DB_PORT: 3306
+  DB_USER: root
+  DB_PASSWORD: ""
+  DB_NAME: test_db
+
 jobs:
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v3
@@ -23,23 +31,23 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
-          pip install pytest-asyncio
+          pip install pytest pytest-asyncio
 
       - name: Run Unit Tests
         run: |
-          pytest tests/unit
+          pytest -v tests/unit
 
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     services:
       mysql_db:
         image: mysql:8.0
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-          MYSQL_DATABASE: test_db
+          MYSQL_DATABASE: ${{ env.DB_NAME }}
         ports:
           - "3306:3306"
         options: >-
@@ -60,46 +68,35 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
+          pip install pytest pytest-asyncio
 
       - name: Wait for DB service
         run: |
           for i in $(seq 1 30); do
-            mysql -h 127.0.0.1 -uroot -e "select 1" > /dev/null 2>&1 && break
+            mysql -h $DB_HOST -u$DB_USER -e "select 1" > /dev/null 2>&1 && break
             sleep 5
           done
 
       - name: Run Database Migrations
         run: |
-          mysql -h 127.0.0.1 -uroot -e "CREATE DATABASE IF NOT EXISTS test_db;" 
-          mysql -h 127.0.0.1 -uroot test_db < schema.sql
-        env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: ""
-          DB_NAME: test_db
+          mysql -h $DB_HOST -u$DB_USER -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
+          mysql -h $DB_HOST -u$DB_USER $DB_NAME < schema.sql
 
       - name: Run Integration Tests
         run: |
-          pytest tests/integration
-        env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: ""
-          DB_NAME: test_db
+          pytest -v tests/integration
 
   end-to-end-tests:
     name: End-to-End Tests
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     services:
       mysql_db:
         image: mysql:8.0
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-          MYSQL_DATABASE: test_db
+          MYSQL_DATABASE: ${{ env.DB_NAME }}
         ports:
           - "3306:3306"
         options: >-
@@ -120,32 +117,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
+          pip install pytest pytest-asyncio
 
       - name: Wait for DB service
         run: |
           for i in $(seq 1 30); do
-            mysql -h 127.0.0.1 -uroot -e "select 1" > /dev/null 2>&1 && break
+            mysql -h $DB_HOST -u$DB_USER -e "select 1" > /dev/null 2>&1 && break
             sleep 5
           done
 
       - name: Run Database Migrations
         run: |
-          mysql -h 127.0.0.1 -uroot -e "CREATE DATABASE IF NOT EXISTS test_db;" 
-          mysql -h 127.0.0.1 -uroot test_db < schema.sql
-        env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: ""
-          DB_NAME: test_db
+          mysql -h $DB_HOST -u$DB_USER -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
+          mysql -h $DB_HOST -u$DB_USER $DB_NAME < schema.sql
 
       - name: Run End-to-End Test
         run: |
-          pytest tests/test_end_to_end.py
-        env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: ""
-          DB_NAME: test_db
+          pytest -v tests/test_end_to_end.py
