Correction de la gestion des tests unitaires

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,20 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
+    services:
+      mysql_db:
+        image: mysql:8.0
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+          MYSQL_DATABASE: ${{ env.DB_NAME }}
+        ports:
+          - "3306:3306"
+        options: >-
+          --health-cmd "mysqladmin ping -h 127.0.0.1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 10
+
     steps:
       - uses: actions/checkout@v3
 
@@ -32,6 +46,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-asyncio
+
+      - name: Wait for DB service
+        run: |
+          for i in $(seq 1 30); do
+            mysql -h $DB_HOST -u$DB_USER -e "select 1" > /dev/null 2>&1 && break
+            sleep 5
+          done
 
       - name: Run Unit Tests
         run: |
